@@ -435,8 +435,6 @@
   <block id="2371c65768dba03d44190d2797940527" category="list-text">*Durchschnittliches Datenreduzierungsverhältnis*: Wählen Sie aus den drei gängigen Datenreduzierungsverhältnissen. Wählen Sie „1:1 - Keine Reduzierung“, „1:1.25 - 20 % Reduzierung“ oder „1:1.5 - 33 % Reduzierung“.</block>
   <block id="905bff561253ba917bae9754d8ea5aa3" category="paragraph">Beachten Sie, dass bei einer Auswahl von weniger als 20 % keine Volume-Snapshots zum Schutz und für langfristige Backups erstellt werden können.</block>
   <block id="695c53d6a8635c5bd280e1390644dcd5" category="list-text">*VM Snapshot-Schutz*: Aktivieren Sie diese Option, um die VMs mit Snapshots zu schützen.</block>
-  <block id="989b80d51d89a9c4e98f8e9d93a8b430" category="list-text">Prüfen Sie auf der Seite *Review EC2 Volumes* die VM-Informationen, Volume-Klassifizierungsregeln, Volume-Zuweisungen und eine Liste der Volumes, die im Rahmen der Bereitstellung migriert werden.</block>
-  <block id="0bd2351ba13aaa50e485f5d6ed8991d1" category="list-text">Überprüfen Sie auf der Seite *Instance Storage prüfen* die EC2-Instanzen und die Volumes, die verschiedenen FSX für ONTAP-Cluster zugewiesen sind.</block>
   <block id="80a8fb685950a12df8093b0708b54241" category="paragraph">Oben auf der Seite werden die monatlichen Kosten für alle implementierten VMs und FSX für ONTAP-Dateisysteme beschrieben. Sie können jeden Abschnitt erweitern, um Details für die „Empfohlene Amazon FSX for ONTAP-Dateisystemkonfiguration“, „geschätzte Kostenaufschlüsselung“, „Volume-Konfiguration“, „Größenannahmen“ und technische „Haftungsausschlüsse“ anzuzeigen.</block>
   <block id="772ab2cb66607567ceddf170a9c148d1" category="doc">Erstellen Sie mit dem Migrationsberater einen Implementierungsplan für VMware Cloud on AWS</block>
   <block id="be0af0f3e1f270dc982344a36c5f734f" category="paragraph">Bei der Migration zu VMware Cloud können Sie mit dem Migrationsberater einen Bereitstellungsplan für folgende Szenarien erstellen:</block>
@@ -471,7 +469,23 @@
   <block id="381900c88e88ebdef33aeaaba326b5d9" category="sidebar">Migrieren Sie zu VMware Cloud on AWS</block>
   <block id="aaa94acfa678f349154ecc14f4c48e40" category="sidebar">Schnellstart für die Migration zu VMware Cloud on AWS</block>
   <block id="8ca85249d2f6a1036c376d3281e10cd7" category="sidebar">Schneller Einstieg für die Migration zu Amazon EC2</block>
-  <block id="71f8c32a3420de60438e9dc0e0e66db0" category="list-text">Wählen Sie in der VMware-Workload-Kachel *Access und Plan* aus und wählen Sie dann *Migration zu AWS nativem Compute* aus. Die Hauptseite des VMware Migration Advisor wird angezeigt.</block>
   <block id="15cd8c066461a2900cdb71fc53b09930" category="list-text">Wählen Sie *Download Plan &gt; Instance Storage Deployment*, um den Plan für die Bereitstellung des externen Datastores im .csv-Format herunterzuladen, damit Sie damit Ihre neue Cloud-basierte intelligente Dateninfrastruktur erstellen können.</block>
   <block id="74f9ca267e4b5efb489a146170987dbb" category="list-text">Wählen Sie *Plan herunterladen &gt; Bericht planen*, um den Bereitstellungsplan im PDF-Format herunterzuladen, damit Sie den Plan zur Überprüfung verteilen können.</block>
+  <block id="2792e29ba30bdded6461ac9b9f0816a4" category="doc">Verbesserungen bei VMware Migration Advisor</block>
+  <block id="bdcdfcdfcb9e0d2084c9c9ff58163d0b" category="paragraph">Diese Version von Workload Factory für VMware bietet Verbesserungen an Funktionalität und Stabilität sowie die Möglichkeit, Migrationspläne mithilfe des VMware Migrationsberaters zu importieren und zu exportieren.</block>
+  <block id="2dbb83c0d88f8aa5c12c5445b2b248ee" category="paragraph"><block ref="2dbb83c0d88f8aa5c12c5445b2b248ee" category="inline-link-rx"></block></block>
+  <block id="aadc951fc26ce017c445dc2a4fc12d5d" category="list-text">Wählen Sie in der VMware-Workload-Kachel *Access und Plan* aus und wählen Sie dann *Migration zu AWS nativem Compute* aus. Der Begrüßungsbildschirm von VMware Migration Advisor wird angezeigt.</block>
+  <block id="34229287aee7a67f52f7e30d46d92cf7" category="paragraph">Informationen zu den Vorteilen des Migrationsberaters finden Sie hier.</block>
+  <block id="3389e3985ea11023e4391a5a8e11e3c2" category="list-text">Wenn Sie fertig sind, wählen Sie *Let's Start*.</block>
+  <block id="26c8e4d27d311b3dd56356d32a6bace5" category="list-text">Prüfen Sie auf der Seite *Review EC2 Volume Assignment* die VM-Informationen, Volume-Klassifizierungsregeln, Volume-Zuweisungen und Liste der Volumes, die im Rahmen der Bereitstellung migriert werden.</block>
+  <block id="84c81acf71fd02d43242aed2387e9584" category="list-text">Überprüfen Sie auf der Seite *Überprüfung der Instance Storage Assignment* die EC2-Instanzen und die Volumes, die verschiedenen FSX für ONTAP-Cluster zugewiesen sind.</block>
+  <block id="0c9d619e17114784eebf5b4294145625" category="list-text">Überprüfen Sie auf der Seite *Überprüfen Sie Ihren Migrationsplan* die geschätzten monatlichen Kosten für alle VMs, die Sie migrieren möchten.</block>
+  <block id="ef3c7f794852a9bd24d0e9c87cce7d80" category="paragraph">Oben auf der Seite werden die monatlichen Einsparungen für FSX für ONTAP-Filesysteme und EBS-Volumes geschätzt. Sie können jeden Abschnitt erweitern, um Details zur vorgeschlagenen Dateisystemkonfiguration, geschätzte Einsparungen, Annahmen und technische Haftungsausschlüsse anzuzeigen.</block>
+  <block id="d30cddb743993744da7757e5dc8d38a4" category="paragraph">Wenn Sie eine neue Bereitstellung planen, die einem vorhandenen Bereitstellungsplan ähnelt, den Sie in der Vergangenheit verwendet haben, können Sie diesen Plan importieren, Änderungen vornehmen und als neuen Bereitstellungsplan speichern.</block>
+  <block id="9666bbc427ef045e019206b1e73f8b26" category="list-text">Wählen Sie in der VMware-Workload-Kachel *Access und Plan* aus und wählen Sie dann *Migration zu AWS nativem Compute* aus.</block>
+  <block id="32a33bea1503730affb121be4db1856d" category="list-text">Wählen Sie <block ref="db832e36fbdf71ec25bff4aa1993346d" category="inline-image-macro-rx" type="image"></block>die vorhandene Json-Plandatei aus, die Sie im Migrationsberater importieren möchten.</block>
+  <block id="381cf8f0eafd87b02005eb434ff3e0f0" category="paragraph">Die Seite Prüfplan wird angezeigt.</block>
+  <block id="eb5a861bf39cbc8f1c04a5223199b242" category="list-text">Sie können *Previous* auswählen, um auf vorherige Seiten zuzugreifen und die Einstellungen für den Plan wie im vorherigen Abschnitt beschrieben zu ändern.</block>
+  <block id="a788f47234ccaf5adf5a6ea422148ef6" category="list-text">Nachdem Sie den Plan an Ihre Anforderungen angepasst haben, können Sie den Plan speichern oder den Planbericht als PDF-Datei herunterladen.</block>
+  <block id="123186fd98b69e2b3d463c83c49edfe7" category="section-title">19 September 2024</block>
 </blocks>
